Fixed button alignment

--- a/src/css/side-menu.styl
+++ b/src/css/side-menu.styl
@@ -87,7 +87,7 @@ body
     font-size 10px
     z-index 10
     width 2em
-    height 0
+    height auto
     padding 2.1em 1.6em
     span
         position relative
